[package]
name = "rtf-esg-compliance"
version = "0.1.0"
edition = "2021"
authors = ["Sandeep Kumar Sahoo <sandeep.savethem2@gmail.com>"]
description = "ESG & Jurisdictional compliance system for RTF Infrastructure"
license = "MIT"
repository = "https://github.com/MrDecryptDecipher/Real-World-Tokenized-Fund-Infrastructure-RTF-"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async and networking
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
aes-gcm = "0.10"

# Zero-knowledge proofs
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"

# ESG data sources
csv = "1.2"
xml-rs = "0.8"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Compliance frameworks
regex = "1.0"
url = "2.0"

# Blockchain integration
solana-sdk = "1.16"
ethers = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.0"
tempfile = "3.0"

[features]
default = ["esg-tracking", "carbon-compliance", "jurisdictional"]
esg-tracking = []
carbon-compliance = []
jurisdictional = []
zk-attestations = []
testing = []
