[package]
name = "rtf-governance"
version = "0.1.0"
edition = "2021"
authors = ["Sandeep Kumar Sahoo <sandeep.savethem2@gmail.com>"]
description = "Advanced Multi-DAO governance system for RTF Infrastructure"
license = "MIT"
repository = "https://github.com/MrDecryptDecipher/Real-World-Tokenized-Fund-Infrastructure-RTF-"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async and networking
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
blake3 = "1.0"

# Zero-knowledge proofs
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"

# Blockchain integration
solana-sdk = "1.16"
solana-client = "1.16"
anchor-lang = "0.28"
ethers = "2.0"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Voting mechanisms
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.0"
sqlx-test = "0.1"

[features]
default = ["multi-dao", "quadratic-voting", "conviction-voting"]
multi-dao = []
quadratic-voting = []
conviction-voting = []
emergency-protocols = []
testing = []
