[package]
name = "rtf-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RTF Infrastructure - Monitoring and Metrics Service"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Monitoring
prometheus = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
