[package]
name = "rtf-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
chainlink-feeds = { workspace = true }
switchboard-v2 = { workspace = true }
