[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

# Cryptography
sha2 = "0.10"
blake3 = "1.0"
aes-gcm = "0.10"
ed25519-dalek = "2.0"

# Async
futures = "0.3"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
